--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link id="img" rel="icon"
         href="BackgroundImages\titleImage.png"
         type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" media=”screen” />
+    <link rel="stylesheet" href="stylesheet.css"/>
 </head>
 
 <body>
