--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <img src="BackgroundImages\section4Image1.jpeg"
                         class="img-fluid">
                 </div>
-                <div class="col-lg-6 fa-pull-right ps-0 ">
+                <div class="col-lg-6 d-none fa-pull-right ps-0 ">
                     <img src="BackgroundImages\section4Image2.png"
                         class="img-fluid">
                 </div>
