--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         href="BackgroundImages\titleImage.png"
         type="image/x-icon">
     <link rel="stylesheet" href="stylesheet.css"/>
+    <link href="http://fonts.cdnfonts.com/css/vertigo-brk-2" rel="stylesheet">
 </head>
 
 <body>
