--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         type="image/x-icon">
     <link rel="stylesheet" href="stylesheet.css"/>
     <link href="http://fonts.cdnfonts.com/css/vertigo-brk-2" rel="stylesheet">
+    <style>
+@import url('https://fonts.cdnfonts.com/css/vertigo-brk-2');
+</style>
 </head>
 
 <body>
