--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="BackgroundImages\titleImage.png"
         type="image/x-icon">
     <link rel="stylesheet" href="stylesheet.css"/>
-    <link href="http://fonts.cdnfonts.com/css/vertigo-brk-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/vertigo-brk-2" rel="stylesheet">
     <style>
 @import url('https://fonts.cdnfonts.com/css/vertigo-brk-2');
 </style>
