--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="col"><img id="smallimages"
                             src="SnakeImages\section2Image4.png"
                             alt="nft4"></div>
-                    <div class="col d-sm-none d-md-block "><img id="smallimages"
+                    <div class="col d-sm-none d-md-block d-none d-sm-block "><img id="smallimages"
                             src="SnakeImages\section2Image5.png"
                             alt="nft5"></div>
                     <div class="col d-xl-none d-xxl-block d-none d-sm-block"><img id="smallimages"
