--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <img src="BackgroundImages\faviconTwitter.png"
                                 class="me-2" alt="twitter" width="40"> </a>
                         <a class="text-white ps-2 d-flex justify-content-end cursor-pointer align-items-center me-3 "
-                            target="_blank" href="http://discord.gg/M3trme2k">
+                            target="_blank" href="https://discord.gg/NjEFAyn7mc">
                             <img src="BackgroundImages\faviconDiscord.png"
                                 class="me-2" alt="discord" width="40"> </a>
                         <a href="" target="_blank"
@@ -420,7 +420,7 @@
                     <img src="BackgroundImages\faviconTwitter.png"
                     class="me-2" alt="twitter" width="40">
                 </a>
-                <a href="http://discord.gg/M3trme2k" class="btn btn-white rounded-circle btn-icon-only fs-6 p-2 me-2 mb-0" target="_blank">
+                <a href="https://discord.gg/NjEFAyn7mc" class="btn btn-white rounded-circle btn-icon-only fs-6 p-2 me-2 mb-0" target="_blank">
                     <img src="BackgroundImages\faviconDiscord.png"
                     class="me-2" alt="discord" width="40"> 
                 </a>
