--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 class="me-2" alt="elrond_logo" width="150">
                         </a>
                         <a class="text-white ps-2 d-flex justify-content-end cursor-pointer align-items-center ms-auto me-2 "
-                            target="_blank" \ href="https://twitter.com/WealthySnakes">
+                            target="_blank" \ href="https://twitter.com/wealthy_snakes">
                             <img src="BackgroundImages\faviconTwitter.png"
                                 class="me-2" alt="twitter" width="40"> </a>
                         <a class="text-white ps-2 d-flex justify-content-end cursor-pointer align-items-center me-3 "
