--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 </div>
                                 <div class="card-body text-center">
                                     <h5 class="mt-3 text-white">
-                                        John
+                                        Sorin
                                     </h5>
                                     <p class="text-sm text-white">
                                         Co-founder & Web Developer
